# Samplexpress-VST-Plugin

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build_all.bat  build_env.bat  build_standalone.bat  build_task.bat  clean_build.bat  configure.bat  do_build.bat  full_build.bat  rebuild.bat  rebuild_all.bat  set-juce-framework.ps1
.github/workflows/: pages.yml
.paul/: MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md
.paul/milestones/: v0.1.0-ROADMAP.md
.paul/phases/06-loop-playback/: 06-01-PLAN.md  06-01-SUMMARY.md
.paul/phases/11-landing-page/: 11-01-PLAN.md  11-01-SUMMARY.md
Source/: AdsrDisplayComponent.cpp  AdsrDisplayComponent.h  FilterResponseComponent.cpp  FilterResponseComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  SamplexpressLookAndFeel.cpp  SamplexpressLookAndFeel.h  SamplexpressVoice.cpp  SamplexpressVoice.h  SpectrumAnalyzerComponent.cpp  SpectrumAnalyzerComponent.h  TabBar.cpp  TabBar.h  VisualKeyboardComponent.cpp  VisualKeyboardComponent.h  WaveformDisplay.cpp  WaveformDisplay.h
docs/: PROCESS-RETROSPECTIVE.md  index.html  process.html  style.css
resources/: Specs.md
resources/icon/: build-ico.ps1
